Fix T84988: Armature symmetries crashes with action constraint

Action constraint without an action pointer set was crashing.